# datastructures

./: .gitignore  BUILD.bazel  README.md  Wishlist.md  go.mod  justfile  main.go
.devcontainer/: .devcontainer.json  Dockerfile
cmd/: BUILD.bazel  benchmark.go  root.go
init/: post-devcontainer-create.sh
pkg/benchmark/: BUILD.bazel  benchmark.go  benchmark_test.go
pkg/datastructures/bplustree/: BUILD.bazel  README.md  bplustree.go  bplustree_test.go  node.go  node_test.go
pkg/datastructures/orderedlist/: BUILD.bazel  README.md  orderedlist.go  orderedlist_test.go
pkg/datastructures/testbench/: BUILD.bazel  testbench.go
pkg/utilities/: BUILD.bazel  utilities.go  utilities_test.go
