load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "primitives_lib",
    srcs = ["main.go"],
    importpath = "github.com/faryeyay/insights/primitives",
    visibility = ["//visibility:private"],
    deps = ["//primitives/cmd"],
)

go_binary(
    name = "primitives",
    embed = [":primitives_lib"],
    visibility = ["//visibility:public"],
)
