load("@rules_go//go:def.bzl", "go_library")

go_library(
    name = "testbench",
    srcs = ["testbench.go"],
    importpath = "github.com/faryeyay/insights/primitives/pkg/datastructures/testbench",
    visibility = ["//visibility:public"],
    deps = ["//primitives/pkg/datastructures/bplustree"],
)
